infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smauth
  template:
    metadata:
      labels:
        app: smauth
    spec:
      containers:
        - name: smauth
          image: social_media/auth:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: smauth-srv
spec:
  selector:
    app: smauth
  ports:
    - name: smauth
      protocol: TCP
      port: 3000
      targetPort: 3000
