infra/k8s/auth-psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:1.1
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: auth-postgres-pvc
      volumes:
        - name: auth-postgres-pvc
          persistentVolumeClaim:
            claimName: auth-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
