infra/k8s/buy-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buy-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smbuy
  template:
    metadata:
      labels:
        app: smbuy
    spec:
      containers:
        - name: smbuy
          image: social_media/buy:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: smbuy-srv
spec:
  selector:
    app: smbuy
  ports:
    - name: smbuy
      protocol: TCP
      port: 3000
      targetPort: 3000
