infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smproduct
  template:
    metadata:
      labels:
        app: smproduct
    spec:
      containers:
        - name: smproduct
          image: social_media/product:0.1
---
apiVersion: v1
kind: Service
metadata:
  name: smproduct-srv
spec:
  selector:
    app: smproduct
  ports:
    - name: smproduct
      protocol: TCP
      port: 3000
      targetPort: 3000
